--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "socket.io": "^4.8.1"
+    "multer": "^2.0.2",
+    "socket.io": "^4.8.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
