--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-  ],
+, "../shared/types.ts"  ],
   "exclude": ["node_modules"]
 }
