--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.34.5",
     "@supabase/supabase-js": "^2.80.0",
+    "framer-motion": "^12.23.25",
     "lucide-react": "^0.554.0",
     "next": "16.0.1",
     "react": "19.2.0",
@@ -23,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
