--- a/server/package.json
+++ b/server/package.json
@@ -18,13 +18,13 @@
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "socket.io": "^4.8.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "typescript": "^5.9.3"      
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "ts-node": "^10.9.2"
   }
 }
