--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,9 @@
     "@supabase/supabase-js": "^2.80.0",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.554.0",
-    "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "socket.io-client": "^4.8.1"
   },
